Added new toolpath generator for lasers